# Rylang

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
backend/include/: env.h  expr.h  lexer.h  parser.h  stmt.h  token.h  tools.h
backend/include/platform/: loader.h
backend/src/: env.cpp  lexer.cpp  parser.cpp
backend/src/platform/: loader.cpp
examples/: README.md  arrays.ry  attempt.ry  calc.ry  class.ry  fib.ry  for_count.ry  functions.ry  hello.ry  inheritance.ry  input.ry  snake.ry  speed_test.ry  test.ry  while_count.ry
interp/include/: class.h  common.h  func.h  runTools.h  runtime.h
interp/src/: class.cpp  common.cpp  defineNative.cpp  evaluate.cpp  func.cpp  runtime.cpp  visitor.cpp
middleend/include/: optimizer.h  resolver.h
middleend/src/: optimizer.cpp  resolver.cpp
misc/: colors.h
modules/lib_cpp/: file.cpp  string.cpp
modules/native/: native.hpp  native_io.hpp  native_list.hpp  native_sys.hpp  native_type.hpp  native_use.hpp
scripts/: build.bat  build.sh  install.bat  install.sh
